@@ -41,7 +41,7 @@ ignore:
 #	Do not over-write the local .gitignore file; we maintain it
 #	by hand for now;
 #
-#	echo ${TOOLS} | sed "s/ /\n/g" > .gitignore
+#	echo ${TOOLS} | tr ' ' '\n' > .gitignore
 #
 
 
