@@ -41,7 +41,7 @@ fresh: clean compile
 clean:
 	rm -f ${TOOLS} ${TRASH}
 ignore:
-	echo ${TOOLS} | sed "s/ /\n/g" > .gitignore
+	echo ${TOOLS} | tr ' ' '\n' > .gitignore
 
 # ====================================================================
 # rules;
